# gomoku-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  flake.nix  main.cpp
scripts/: train.sh
src/: game.cpp  game.hpp  main.cpp  mcts.cpp  mcts.hpp  model.cpp  model.hpp  net_query.cpp  net_query.hpp  tensor_utils.cpp  tensor_utils.hpp
